2671 [VobSubber]            remember the "keep all..." setting. Feature request #600
2670 [Haali Media Splitter] added "Haali Media Splitter" as update package
                            improved detection if it is installed
                            if it is needed by the HD Streams Extractor it will be installed (administrative permissions are required)
2669 [VobSubber]            added title selector for DVD sources incl. multi-angle support
2668 [FileIndexer]          added title selector for DVD sources incl. multi-angle support
2667 [TitleSelector]        added support for multi-angle DVD sources
     [OneClick]             added support for multi-angle DVD sources
2666 [TitleSelector]        improved title selector for DVD/Blu-ray sources
2665 [OneClick]             added support for folders as drag&drop source of the input control
2664 [IFOParser]            improved type detection
2663 [FileIndexer]          fixed processing of DVDs with only one PGC (regression of 2658)
2662 [IFOParser]            fixed sometimes not able to get the language information (regression of 2657)
2661 [Main]                 reverted 2639. Bug #843
2660 [Presets]              fixed not changing the selected preset if no change has been made in the configuration window. Bug #844
2659 [VobSubber]            fixed subtitle export for multi-angle discs
2658 [OneClick]+[FileIndexer] only use pgcdemux if it is a multi-pgc or multi-angle DVD source
2657 [IFOParser]            add subtitle type only if there are multiple types
2656 [OneClick]+[ChapterCreator] improved DVD/Blu-ray structure detection
2655 [IFOParser]            fixed missing first subtitle track if it contains more than one subtitle type
                            added type information (4:3/wide/letterbox/pan&scan) to the description of the subtitle track
                            added multi-angle detection
2653 [AudioEncoder]         fixed an error when aborting the job during the initial steps